# excise

./: .ackrc  .gitignore  .gitmodules  README  calculator.c  emacsconfig  printFile.c  stack.c  stack.h
airpymongo/: airpymongo.py  batch.py
airrequirejs/: README.md  index.html
airscrapy/: test.ipynb
algorithms/: algorithms.org
apue-example/: apue.org  chmod_test.c  copy.c  creatfile.c  dup.c  dupfd.c  fcntl.c  fgetfl.c  hidepwd.c  ipo.c  ls.c  mmap.c  mv.c  mv1.c  redirec.c  redirectexec.c  redirectexec2.c  redirectin.c  shell.c  shell.h  splitenv.c  stat.c  strchr.c  strcmp.c  strerror.c  strftime.c  strncat.c  strncopy.c  strpbrk.c  strspn.c  strstr.c  strtok.c  strtol.c  sysconf.c  testfcntl.c  testtime.c
brain/: sudu.py
clang/: clang.org
cmockery/: cmockery.org
connman/: connman.org  syntogitproj.sh  syntopad.sh
conntrack/: conntrack.org
cpplang/: cpplang.org
dbus/: dbus-glib.org  dbus.org  syntogitproj.sh
discretemath/: discretemath.org
glib/: glib.org  syntogitproj.sh
graphviz/: grapviz.org
htm5/: index.html
interviewstreet/: kingdom_connectivity.c  kingdom_connectivity2.c
joomla/: joomla.org
lcut/: lcut.org
make/demo/summary/: Makefile.am  Makefile.in  configure  configure.ac
make/demo/summary/doc/: Makefile.in  OVERVIEW
make/demo/summary/man/: Makefile.am  Makefile.in
make/demo/summary/script/: Makefile.am  Makefile.in
make/demo/summary/src/: Makefile.am  Makefile.in
make/demo/summary/src/lib/: Makefile.am  Makefile.in  lib.c  lib.h
make/demo/summary/src/person/: Makefile.am  Makefile.in  do.c  do.h  main.c  main.h
(+1487 files in other folders)
